# auditor

./: .gitignore  README.md  main.py  pyproject.toml
auditor/: __main__.py  audit_bb.py  audit_pre_election_row.py  audit_table.py  audit_tables.py  audit_tally.py  audit_vote.py
tests/: conftest.py  test_audit_bb.py  test_audit_tables.py  test_audit_tally_results.py  test_multiple_tables.py  test_pre_election_row.py  test_single_vote.py  test_table.py
